--- a/iris_analysis.ipynb
+++ b/iris_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nUniversidad Autónoma de Chihuahua\\nMachine Learning\\nProyecto Iris\\nGael Aristides Hinojos Ramírez\\n'"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "max    150.000000       7.900000      4.400000       6.900000      2.500000"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SepalLengthCm</th>\n",
+       "      <th>SepalWidthCm</th>\n",
+       "      <th>PetalLengthCm</th>\n",
+       "      <th>PetalWidthCm</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\n",
+       "17             5.1           3.5            1.4           0.3      Iris-setosa\n",
+       "81             5.5           2.4            3.7           1.0  Iris-versicolor\n",
+       "103            6.3           2.9            5.6           1.8   Iris-virginica\n",
+       "33             5.5           4.2            1.4           0.2      Iris-setosa\n",
+       "101            5.8           2.7            5.1           1.9   Iris-virginica\n",
+       "15             5.7           4.4            1.5           0.4      Iris-setosa\n",
+       "64             5.6           2.9            3.6           1.3  Iris-versicolor\n",
+       "80             5.5           2.4            3.8           1.1  Iris-versicolor\n",
+       "14             5.8           4.0            1.2           0.2      Iris-setosa\n",
+       "62             6.0           2.2            4.0           1.0  Iris-versicolor"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Se observan los primeros 10 valores\n",
+    "X_train.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +414,7 @@
        "<Axes: xlabel='PetalLengthCm', ylabel='PetalWidthCm'>"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -305,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1526,8 +1668,6 @@
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
       "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -1848,8 +1988,6 @@
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
       "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -2111,22 +2249,6 @@
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=None)\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=None)\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=None)\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
      ]
     },
@@ -2143,6 +2265,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=None)\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1197: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=None)\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
       "c:\\Users\\USER\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_sag.py:349: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
@@ -2363,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2373,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2387,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -2410,10 +2550,10 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x20f099bfcb0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x20f09e68e60>"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2453,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2602,7 @@
        "['pipeline.sav']"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
